# latex2ai

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE  LaTeX2AI.sln  LaTeX2AI.vcxproj  LaTeX2AI.vcxproj.filters  README.md  UI.md  new_tex.tex  todo.md  todo.txt
.github/workflows/: testing.yml
LaTeX2AI.xcodeproj/: project.pbxproj
LaTeX2AI.xcodeproj/xcshareddata/xcschemes/: LaTeX2AI.xcscheme
doc/: BUILD_FROM_SOURCE.md  CHANGELOG.md
doc/images/: convert_icons.sh
doc/logo/: create_logo.sh  item_placement.tex  logo_icon.tex
forms/: LaTeX2AIForms.csproj
forms/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
forms/src/: l2a_forms.cs
forms/src/forms/: base.Designer.cs  base.cs  l2a_debug.Designer.cs  l2a_debug.cs  l2a_item.Designer.cs  l2a_item.cs  l2a_options.Designer.cs  l2a_options.cs  l2a_options.resx  l2a_redo.Designer.cs  l2a_redo.cs  l2a_redo.resx
forms/src/utlility/: l2a_error.cs  parameter_list.cs
icon/: create_icon.sh  icon_forms.tex  icon_l2a.tex
images/: create_images.sh  item_placement.tex
l2a/: .clang-format  LaTeX2AI.vcxproj  LaTeX2AI.vcxproj.filters
l2a/resources/: cursor.xml  l2a.rc
l2a/src/: l2a_constants.h  l2a_forms.h  l2a_global.cpp  l2a_names.h  l2a_plugin.cpp  l2a_plugin.h  l2a_property.cpp  l2a_suites.cpp  l2a_suites.h
l2a/src/l2a_ai_functions/: l2a_ai_functions.cpp  l2a_ai_functions.h
l2a/src/l2a_annotator/: l2a_annotator.cpp  l2a_annotator.h
l2a/src/l2a_error/: l2a_error.cpp  l2a_error.h
l2a/src/l2a_forms/: l2a_forms.cpp  l2a_forms.h
l2a/src/l2a_global/: l2a_global.cpp  l2a_global.h  l2a_version.cpp  l2a_version.h
l2a/src/l2a_item/: l2a_item.cpp  l2a_item.h
l2a/src/l2a_latex/: l2a_latex.cpp  l2a_latex.h
l2a/src/l2a_property/: l2a_property.cpp  l2a_property.h
l2a/src/tests/: test_base64.cpp  test_base64.h  test_file_system.cpp  test_file_system.h  test_forms.cpp  test_forms.h  test_framework.cpp  test_framework.h  test_parameter_list.cpp  test_parameter_list.h  test_string_functions.cpp  test_string_functions.h  test_utility.cpp  test_utlity.h  testing.cpp  testing.h  testing_utility.cpp  testing_utlity.h
l2a/src/utility/: file_system.cpp  file_system.h  math.cpp  math.h  parameter_list.cpp  parameter_list.h  string_functions.cpp  string_functions.h  to_from_string.h  utils.h
l2a/src/utils/: l2a_file_system.cpp  l2a_parameter_list.cpp  l2a_string_functions.cpp  l2a_utils.h  l2a_version.cpp
logo/: create_images.sh  logo_icon.tex
resources/: CMakeLists.txt  resource.h
resources/Mac/: LaTeX2AI.r  LaTeX2AI2x.r
resources/Win/: LaTeX2AI.rc  Resource.h
resources/raw/: IDToFile.txt
scripts/: __init__.py  base.py  build.py  check_license.py  compile_mac.sh  compile_solution.bat  create_headers.py  create_release.py  release_zip_readme.md
scripts/icon/: create_icon.sh
scripts/pipl/: README.md  create_pipl.py
scripts/pipl/pipl_gen/: __init__.py  pipl_gen.py  template_plugin.json
scripts/signing/: SET_KEY_EXAMPLE.sh  sign_ui_folder.sh
scripts/ui_signing/: SET_KEY_EXAMPLE.sh  sign_ui_folder.sh
src/: CMakeLists.txt  l2a_annotator.cpp  l2a_annotator.h  l2a_constants.h  l2a_forms.cpp  l2a_forms.h  l2a_global.cpp  l2a_global.h  l2a_item.cpp  l2a_item.h  l2a_latex.cpp  l2a_latex.h  l2a_names.h  l2a_plugin.cpp  l2a_plugin.h  l2a_property.cpp  l2a_property.h  l2a_suites.cpp  l2a_suites.h  l2a_ui_base.cpp  l2a_ui_base.h  l2a_ui_debug.cpp  l2a_ui_debug.h  l2a_ui_item.cpp  l2a_ui_item.h  l2a_ui_manager.cpp  l2a_ui_manager.h  l2a_ui_options.cpp  l2a_ui_options.h  l2a_ui_redo.cpp  l2a_ui_redo.h
src/tests/: CMakeLists.txt  test_base64.cpp  test_base64.h  test_file_system.cpp  test_file_system.h  test_forms.cpp  test_framework.cpp  test_framework.h  test_latex.cpp  test_latex.h  test_parameter_list.cpp  test_parameter_list.h  test_string_functions.cpp  test_string_functions.h  test_utility.cpp  test_utlity.h  testing.cpp  testing.h  testing_utility.cpp  testing_utlity.h
src/utils/: CMakeLists.txt  l2a_ai_functions.cpp  l2a_ai_functions.h  l2a_error.cpp  l2a_error.h  l2a_execute.cpp  l2a_execute.h  l2a_file_system.cpp  l2a_file_system.h  l2a_math.cpp  l2a_math.h  l2a_parameter_list.cpp  l2a_parameter_list.h  l2a_string_functions.cpp  l2a_string_functions.h  l2a_utils.h  l2a_version.cpp  l2a_version.h
tex/: LaTeX2AI_header.tex  LaTeX2AI_item.tex
ui/CSXS/: manifest.xml
ui/css/: latex2ai.css  latex2aiui.css
ui/html/: index.html  index_debug.html  index_item.html  index_options.html  index_redo.html
ui/js/: CSInterface.js  common.js  main.js  main_debug.js  main_item.js  main_options.js  main_redo.js
